--- a/sshbook.yml.example
+++ b/sshbook.yml.example
@@ -2,3 +2,6 @@ localhost:
    user: 'user'
    host: 'localhost'
    options: '-Y'
+script-host:
+   user: 'user'
+   script: "require 'open-uri'; open('myreturn-ip.com').read"
