--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
   - ssh-keygen -f ~/.ssh/id_rsa.pub -N ''
   - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
   - echo -n "localhost " > ~/.ssh/known_hosts
-  - cat ssh_host_ecdsa_key.pub >> ~/.ssh/known_hosts
+  - cat /etc/ssh/ssh_host_ecdsa_key.pub >> ~/.ssh/known_hosts
   - ssh localhost ls
