--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ install:
   - echo -n "localhost " > ~/.ssh/known_hosts
   - cat /etc/ssh/ssh_host_ecdsa_key.pub >> ~/.ssh/known_hosts
   - ssh localhost ls
+branches:
+   only:
+      - master
+      - testing
