--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: ruby
 rvm:
   - 1.9.3
+  - 1.8.7
   - ruby-head
+  - rbx-18mode
+  - rbx-19mode
+  - jruby-18mode # JRuby in 1.8 mode
+  - jruby-19mode # JRuby in 1.9 mode
 install: 
   - ssh-keygen -f ~/.ssh/id_rsa -N ''
   - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
